@@ -14,6 +14,9 @@ Core and Builtins
 
 - Issue #6540: Fixed crash for bytearray.translate() with invalid parameters.
 
+- Issue #6573: set.union() stopped processing inputs if an instance of self
+  occurred in the argument chain.
+
 - Issue #6070: On posix platforms import no longer copies the execute bit
   from the .py file to the .pyc file if it is set.
 
